Add Network Policies

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -64,3 +64,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ERROR_ON_MISSING_EXEC_BIT: true
           USE_FIND_ALGORITHM: true
+          VALIDATE_JSCPD: false
